--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -12,5 +12,5 @@
     "isolatedModules": true,
     "strict": true
   },
-  "include": ["src", "types", "constants.ts"]
+  "include": ["src", "types", "constants.ts", "types.d.ts", "base.d.ts"]
 }
