--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inventory",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "description": "",
   "type": "module",
   "scripts": {
@@ -29,6 +29,7 @@
     "@solidjs/router": "^0.15.3",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/solid-table": "^8.21.3",
+    "@tanstack/solid-virtual": "^3.13.13",
     "lucide-solid": "^0.525.0",
     "pocketbase": "^0.26.1",
     "solid-js": "^1.9.5",
