--- a/ui/package.json
+++ b/ui/package.json
@@ -7,16 +7,11 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "serve": "vite preview"
   },
   "license": "MIT",
   "devDependencies": {
-    "@storybook/addon-docs": "^9.1.10",
-    "@storybook/addon-themes": "^9.1.10",
-    "storybook": "^9.1.10",
-    "storybook-solidjs-vite": "^9.0.3",
+    "daisyui": "^5.5.14",
     "typescript": "^5.7.2",
     "vite": "^6.0.0",
     "vite-plugin-solid": "^2.11.6"
@@ -27,6 +22,7 @@
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@kobalte/core": "^0.13.10",
     "@solidjs/router": "^0.15.3",
+    "@solidpb/ui-kit": "^0.1.1",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/solid-table": "^8.21.3",
     "@tanstack/solid-virtual": "^3.13.13",
